# qudi-iqo-modules

./: .gitignore  README.md  VERSION  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/scripts/: fetch_python_versions.py
.github/workflow_utils/: check_updates.py  compare_pip_freeze.py  compare_status_vars.py  fetch_python_versions.py  get_pinned_packages.py  save_status_vars.py  write_python_version_badge.py
.github/workflows/: README.md  publish_supported_python.yml  release_pypi.yml  release_test_pypi.yml  test.yml  test_req.yml  test_sv.yml
docs/: Makefile  changelog-lens.md  changelog.md  conf.py  index.rst  installation_guide.md  migrating_config_from_v0.1.md  migrating_from_qudi_v0.1.md  module_conversion.md  setup_confocal_scanning.md  setup_laserscanning.md  setup_odmr.md  setup_timeseries.md  using_instream_buffer.md  using_instream_sync.md
docs/api_reference/: index.rst
docs/development/: index.rst
docs/examples/: index.rst
docs/getting_started/: index.rst
docs/gui/: index.rst
docs/hardware/: index.rst
docs/interface/: index.rst
docs/logic/: index.rst
docs/repo_management/: release_workflow.md
docs/source/: changelog-lens.md  conf.py  guides.md  index.md  installation.md  programming-guides.md
docs/source/_ext/: plotstatemachine.py
docs/source/iqo-docs/: installation_guide.md  migrating_from_qudi_v0.1.md  setup_confocal_scanning.md  setup_odmr.md  setup_timeseries.md
docs/source/iqo-docs/repo_management/: release_workflow.md
docs/source/lens-modules/: excitation-spectroscopy.md  state-machines.md
docs/source/lens-modules/hardwares/: dummy_excitation_scanner.md  finite_sampling_scanning_excitation.md  matisse.md
docs/util/: index.rst
installation/: install.py
src/: sitecustomize.py
src/qudi/: default.cfg  magnet_psu.cfg  wavemter_rework.cfg
src/qudi/config/: confocal_config.cfg  default.cfg  dummy_spectrometer_dund.cfg  ni_scanning_testing.cfg  spectrometer_testing.cfg
src/qudi/gui/: spectrometer_gui.py
src/qudi/gui/camera/: camera_exposure_settings_SPC3.py  camera_settings_dialog.py  cameragui.py  cameragui_SPC3.py
src/qudi/gui/excitation_scanner/: control_widget.py  data_widget.py  excitation_gui.py  excitation_window.py
src/qudi/gui/laser/: laser_control_dockwidget.py  laser_gui.py  laser_plot_dockwidgets.py
src/qudi/gui/laserscanner/: laserscannergui.py
src/qudi/gui/laserscanning/: laser_scanning_gui.py
src/qudi/gui/magnet/: axes_control_dockwidget.py  magnet_gui.py  magnetgui.py  ui_device_display_tab.ui  ui_magnet_maingui.ui  ui_magnetgui.ui
src/qudi/gui/nv_calculator/: nv_calculatorgui.py  ui_nv_calculator.ui
src/qudi/gui/odmr/: odmr_control_dockwidget.py  odmr_control_dockwidget_old.py  odmr_fit_dockwidget.py  odmr_main_window.py  odmr_plot_widget.py  odmr_settings_dialog.py  odmrgui.py
src/qudi/gui/pidgui/: pidgui.py  ui_pid_control.ui
src/qudi/gui/poimanager/: poimanagergui.py  ui_poimanagergui.ui
src/qudi/gui/pulsed/: pulse_editors.py  pulsed_custom_widgets.py  pulsed_item_delegates.py  pulsed_maingui.py  ui_pulse_analysis.ui  ui_pulse_editor.ui  ui_pulsed_main_gui_settings_predefined_advenced_options.ui  ui_pulsed_maingui.ui  (+1 more)
src/qudi/hardware/: interface_test_hardware.py  pid_arduino.py  pulsed_finite_sampling_input.py  pulsed_finite_sampling_input_old.py  pulsed_tt_finite_sampling_input.py  serial_instreamer.py
src/qudi/interface/: autoscan_interface.py  camera_interface.py  data_instream_interface.py  excitation_scanner_interface.py  fast_counter_interface.py  finite_sampling_input_interface.py  finite_sampling_io_interface.py  finite_sampling_output_interface.py  grating_spectrometer_interface.py  magnet_interface.py  microwave_interface.py  modulation_interface.py  motor_interface.py  pid_controller_interface.py  process_control_interface.py  pulser_interface.py  qdyne_counter_interface.py  sampled_finite_state_interface.py  scannable_laser_interface.py  scanning_probe_interface.py  science_camera_interface.py  scientific_camera_interface.py  simple_laser_interface.py  spectrometer_interface.py  switch_interface.py  syringe_pump_interface.py  test_interface.py  wavemeter_interface.py
src/qudi/logic/: camera_logic.py  camera_logic_SPC3.py  camera_logic_SPC3_old.py  camera_logic_SPC3_old2.py  camera_logic_custom.py  correlation_logic.py  finite_sampling_scanning_excitation_logic.py  interface_test_logic.py  jupyter_pulsed_logic.py  laser_logic.py  laser_scanner_logic.py  laser_scanning_logic.py  magnet_data_logic.py  magnet_logic.py  nv_calculator_logic.py  odmr_logic.py  pid_logic.py  poi_manager_logic.py  power_sweep_logic.py  qdplot_logic.py  qdyne_dataclass.py  qdyne_logic.py  qdyne_tk.py  scanning_2d_correlation_logic.py  scanning_data_logic.py  scanning_excitation_spectroscopy.py  scanning_optimize_logic.py  scanning_probe_logic.py  software_pid_controller.py  spad_optimize_logic.py  spad_probe_logic.py  spectrometer_logic.py  spectrometer_logic_dund.py  switch_logic.py  taskrunner.py  time_series_reader_logic.py  timetagger_logic.py  user_logic.py  wavemeter_histogram_logic.py  wavemeter_logger_logic.py  (+3 more)
src/qudi/scripts/: power_sweep.py
src/qudi/tasks/: example_task.py  pulsed_refocus.py
src/qudi/util/: benchmark.py  conversions.py  enums.py  immutablekeydict.py  ringbuffer.py  thread_exception_watchdog.py  tomldatastorage.py  yaml_helpers.py
src/qudi_iqo_modules.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/user_scripts/Timo/: console_toolkit.py  double_nv.ipynb  minimal_example.ipynb  script_logic_essentials.py
tests/: .coveragerc  conftest.py  get_log_file_path.py  test.cfg  test_OdmrLogic.py  test_change_status_var_sample.py  test_modify_status_var_example.py  test_modify_status_var_file.py  test_modify_status_var_instance.py  test_modify_status_var_sample.py  test_reset_status_var.py  test_reset_status_var_gui.py  test_scan_constraints.py  test_scanning.py  test_scanning_gui.py  test_scanning_optimize.py
tools/: fetch_python_versions.py  install.py
workflow_utils/: check_updates.py  reqs_3.10.txt  reqs_3.9.txt
(+335 files in other folders)
